app/assets/stylesheets/comment_threads.scss
.post--comments-thread-wrapper {
  .post--comments-thread {
    .widget--body:not(.deleted-comments) {
        padding: 0;

      .comment {
        margin: 0;
      }
    }
  }

  .droppanel {
    max-width: 15em;

    .droppanel--menu {
      max-width: unset;
    }
  }
}

.thread {
  .widget--show-more {
    font-size: 0.9em;
    padding: 0.5em;
    text-align: center;
  }
}

